Update old project